--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Apakah kamu mau menjadi Valentine ku?</h1>
+      <h1>Will You Be My Valentine?</h1>
       <div class="buttons">
-        <button class="yes-button" onclick="handleYesClick()">Ya</button>
+        <button class="yes-button" onclick="handleYesClick()">Iya</button>
         <button class="no-button" onclick="handleNoClick()">Tidak</button>
       </div>
       <div class="gif_container">
